--- a/PowerBINew.ipynb
+++ b/PowerBINew.ipynb
@@ -18,7 +18,7 @@
     "One neat thing about this integration is that one can use M provided by Power BI for Data Manupilation or Manipulate data further after importing Data in Power BI using Python since data gets projected as Data Frame when a Python visulation is selected for analysis\n",
     "\n",
     "\n",
-    "Here we'll be taking a CSV Dataset(https://github.com/sherazsalahuddin/PythonPowerBI/blob/master/datacamp.csv) from an earlier [Tutorial](https://www.datacamp.com/community/tutorials/tutorial-python-beautifulsoup-datacamp-tutorials) of mine created earlier by collecting data from Datacamp website itself for the purpose of Analysis in Power BI along with using Python\n",
+    "Here we'll be taking a CSV [Dataset](https://github.com/sherazsalahuddin/PythonPowerBI/blob/master/datacamp.csv) from an earlier [Tutorial](https://www.datacamp.com/community/tutorials/tutorial-python-beautifulsoup-datacamp-tutorials) of mine created earlier by collecting data from Datacamp website itself for the purpose of Analysis in Power BI along with using Python\n",
     "\n",
     "The Dataset is a list of all Articles/Tutorials that have been published at Data Camp since the very beginning while gathering the following information for each one of them\n",
     "\n",
